--- a/CrudApplication/src/app/employees/employees.component.html
+++ b/CrudApplication/src/app/employees/employees.component.html
@@ -1,10 +1,21 @@
 
 <h2>Employees</h2>
+<div>
+  <label>Employee name:
+    <input #employeeName />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(employeeName.value); employeeName.value=''">
+    add
+  </button>
+</div>
 <ul class="heroes">
   <li *ngFor="let employee of employees" 
   [class.selected]="employee === selectedEmployee" 
   (click)="onSelect(employee)">
     <span class="badge">{{employee.id}}</span> {{employee.name}}
+    <button class="delete" title="delete employee"
+  (click)="delete(employee)">x</button>
   </li>
 </ul>
 <app-employee-detail [employee]="selectedEmployee"></app-employee-detail>
