--- a/CrudApplication/src/app/employees/employees.component.html
+++ b/CrudApplication/src/app/employees/employees.component.html
@@ -13,9 +13,11 @@
   <li *ngFor="let employee of employees" 
   [class.selected]="employee === selectedEmployee" 
   (click)="onSelect(employee)">
+    <a routerLink="/detail/{{employee.id}}">
     <span class="badge">{{employee.id}}</span> {{employee.name}}
+    </a>
     <button class="delete" title="delete employee"
   (click)="delete(employee)">x</button>
   </li>
 </ul>
-<app-employee-detail [employee]="selectedEmployee"></app-employee-detail>
+
