--- a/CrudApplication/src/app/app.component.html
+++ b/CrudApplication/src/app/app.component.html
@@ -2,10 +2,22 @@
 
 <div style="text-align:center">
   <h1>
-    Welcome to {{title}}!!
+    Employee Details
   </h1>
-  <nav>
-    <a routerLink="add">Add</a>
-  </nav>
-  <router-outlet></router-outlet>
 </div>
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <a routerLink="add" routerLinkActive="active"> Add 
+          </a>
+        </li>    
+      </ul>
+    </div>
+  </nav>
+  
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+
